# pingtai-rules

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 20260311_0001_initial_schema.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: audit.py  rules.py
app/core/: __init__.py  config.py
app/db/: models.py  session.py
app/repositories/: audit.py  rules.py
app/schemas/: audit.py  common.py  rule.py
app/services/: audit_orchestrator.py  candidate_screening.py  embeddings.py  fuzzy_matching.py  llm_judge.py  local_rule_source.py  report.py  rewrite.py  rule_management.py  rule_recall.py  text_processing.py
app/web/: __init__.py  router.py
app/web/static/: app.css  app.js
app/web/templates/: index.html
data/rule_library/: manifest.json
scripts/: archive_douyin_rule_explain.py  build_video_channel_rule_library.py  build_xhs_creator_center_rules.py  build_xhs_rule_baike_workbook.py  export_douyin_archive_excel.py  export_video_channel_rule_library_workbook.py  export_xhs_rule_library_workbook.py  extract_xhs_notes_sequential.py  extract_xhs_rule_baike_from_links_per_note.py  extract_xhs_rule_baike_via_mediacrawler.py  merge_xhs_sequential_captures.py  ocr_xhs_notes.py  process_xhs_creator_center_manual.py
tests/: conftest.py  test_api.py  test_candidate_screening.py  test_llm_judge.py  test_local_rule_source.py  test_rule_library.py  test_text_processing.py  test_video_channel_keyword_recall.py
(+10 files in other folders)
