[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "platform-content-audit"
version = "0.1.0"
description = "Multi-platform content audit service for Douyin, Xiaohongshu, and Video Channel."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "alembic>=1.14.1,<2.0.0",
  "fastapi>=0.115.11,<1.0.0",
  "pgvector>=0.3.6,<1.0.0",
  "psycopg[binary]>=3.2.6,<4.0.0",
  "pydantic>=2.10.6,<3.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "sqlalchemy>=2.0.38,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.25.3,<1.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "ruff>=0.11.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["B008"]
